--- a/CMPUT301W15T12/res/layout/new_account.xml
+++ b/CMPUT301W15T12/res/layout/new_account.xml
@@ -61,4 +61,13 @@
         android:hint="@string/ep"
         android:inputType="textPassword" />
 
+    <Button
+        android:id="@+id/buttonUserLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editConfirmPassword"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="51dp"
+        android:text="@string/ChooseGeolocation" />
+
 </RelativeLayout>
