--- a/CMPUT301W15T12/res/layout/add_item.xml
+++ b/CMPUT301W15T12/res/layout/add_item.xml
@@ -89,6 +89,7 @@
         android:id="@+id/buttonAddImage"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/buttonDeleteImage"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/editCurrency"
         android:onClick="addImage"
@@ -98,8 +99,9 @@
         android:id="@+id/buttonChooseLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/buttonAddImage"
+        android:layout_alignBottom="@+id/buttonDeleteImage"
         android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/buttonAddImage"
         android:layout_toRightOf="@+id/buttonAddImage"
         android:text="@string/ChooseGeolocation" />
 
@@ -109,7 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/buttonEditItemDone"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/buttonAddImage"
+        android:layout_alignRight="@+id/buttonAddImage"
         android:text="@string/Delete_Photo" />
 
 </RelativeLayout>
