added a way to return locations to the activities and put a see locations option in the claim menu

--- a/CMPUT301W15T12/res/menu/claim.xml
+++ b/CMPUT301W15T12/res/menu/claim.xml
@@ -30,5 +30,10 @@
         android:onClick="seeComments"
         android:title="@string/SeeComments">
     </item>
+    <item
+        android:id="@+id/seeLocations"
+        android:onClick="seeLocations"
+        android:title="@string/seeLocations">
+    </item>
 
 </menu>
