--- a/CMPUT301W15T12/res/layout/tag_manager.xml
+++ b/CMPUT301W15T12/res/layout/tag_manager.xml
@@ -34,7 +34,7 @@
     </ListView>
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textViewApproverTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/textViewApproverTotal"
         android:layout_marginTop="14dp"
         android:text="@string/Add" />
 
