--- a/CMPUT301W15T12/res/layout/mapview.xml
+++ b/CMPUT301W15T12/res/layout/mapview.xml
@@ -7,7 +7,14 @@
     <org.osmdroid.views.MapView
         android:id="@+id/mapview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="419dp" >
     </org.osmdroid.views.MapView>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Save Location"
+        android:onClick= "returnLocation" />
 
 </LinearLayout>
