--- a/CMPUT301W15T12/res/layout/mapview.xml
+++ b/CMPUT301W15T12/res/layout/mapview.xml
@@ -13,7 +13,7 @@
     <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="Save Location"
         android:onClick= "returnLocation" />
 
