--- a/CMPUT301W15T12/res/layout/item_page.xml
+++ b/CMPUT301W15T12/res/layout/item_page.xml
@@ -100,7 +100,7 @@
         android:textColor="#000" />
 
     <CheckBox
-        android:id="@+id/checkBoxIncludePicture"
+        android:id="@+id/checkBoxToFlag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
