--- a/CMPUT301W15T12/res/layout/mapview.xml
+++ b/CMPUT301W15T12/res/layout/mapview.xml
@@ -14,7 +14,7 @@
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Save Location"
+        android:text="Done"
         android:onClick= "returnLocation" />
 
 </LinearLayout>
