--- a/CMPUT301W15T12/res/menu/choose_list.xml
+++ b/CMPUT301W15T12/res/menu/choose_list.xml
@@ -5,5 +5,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+        <item
+        android:id="@+id/saveEverything"
+        android:onClick="saveClaim"
+        android:title="@string/SaveEverything">
+    </item>
 
 </menu>
